Fix captcha field margin on create account page
Bottom margin creating unnecessary big gap after the recent CSS cleanup.

--- a/less/specials/userlogin.less
+++ b/less/specials/userlogin.less
@@ -88,7 +88,7 @@ form.user-login {
 	div.wpCaptcha,
 	#wpLoginAttempt,
 	#wpCreateaccount {
-		margin: 12px 0;
+		margin: 12px 0 0;
 	}
 
 	.mw-mf-create-account {
